# SDL_GAME

./: .gitignore  CMakeLists.txt
cmake/: FindSDL2_image.cmake
include/: Components.hpp  ECS.hpp  Engine.hpp  GameObject.hpp  RenderWindow.hpp  TextureManager.hpp  Window.hpp
include/ECS/: Components.hpp  ECS.hpp  PositionComponent.hpp  SpriteComponent.hpp
src/: Engine.cpp  GameObject.cpp  RenderWindow.cpp  TextureManager.cpp  Window.cpp  main.cpp
